--- a/html/index.html
+++ b/html/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Nội thất giá rẻ ">
     <meta name="author" content="">
-    <title>Nội thất giá rẻ </title>
+    <title>Nội Thất Giá Rẻ Thành Tài</title>
+	<meta name="description" content="Nội Thất Giá Rẻ Thành Tài">
     <!-- Bootstrap Core CSS -->
     <!--<link href="css/bootstrap.min.css" rel="stylesheet">-->
     <!-- Custom CSS -->
@@ -112,7 +112,7 @@
             <div class="container clearfix">
                 <nav class="pull-left">
                     <ul id="menu-contact-menu" class="nav nav-horizontal">
-                        <li id="menu-item-301" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-301"><a href="#crafthouse/contact/">Queries: +27 21 123 4321</a></li>
+                        <li id="menu-item-301" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-301"><a href="#crafthouse/contact/">0938027759 - 0976984331</a></li>
                         <li id="menu-item-375" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-375"><a href="http://twitter.com"><i class="fa fa-twitter"></i></a></li>
                         <li id="menu-item-379" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-379"><a href="http://facebook.com"><i class="fa fa-facebook"></i></a></li>
                         <li id="menu-item-384" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-384"><a href="http://instagram.com"><i class="fa fa-instagram"></i></a></li>
@@ -162,8 +162,8 @@
                     <div class="logo">
                         <a href="#crafthouse/" class="custom-logo-link" rel="home" itemprop="url"><img width="151" height="138" src="images/site-logo.png" class="custom-logo" alt="site-logo" itemprop="logo" srcset="images/site-logo.png 151w, images/site-logo-150x138.png 150w" sizes="(max-width: 151px) 100vw, 151px"></a>
                         <div class="site-description">
-                            <h3 class="sitename sitetitle"><a href="#crafthouse">CraftHouse</a></h3>
-                            <p class="tagline">WordPress Furniture Theme</p>
+                            <h3 class="sitename sitetitle"><a href="#crafthouse">Nội Thất Giá Rẻ Thành Tài</a></h3>
+                            <p class="tagline">Mang vẻ đẹp cho không gian bạn</p>
                         </div>
                     </div>
                 </div>
@@ -186,7 +186,7 @@
                 <div class="row">
                     <div class="span12">
                         <div id="owl-demo" class="owl-carousel">
-                            <div class="item"><img src="images/slide1.jpg" alt="The Last of us"></div>
+                            <div class="item"><img src="images/loi.jpg" alt="The Last of us"></div>
                             <div class="item"><img src="images/slide2.jpg" alt="GTA V"></div>
                             <div class="item"><img src="images/slide3.jpg" alt="Mirror Edge"></div>
                         </div>
@@ -196,9 +196,10 @@
             <div class="storekit-product-category-widget row content-vertical-massive" id="layers-widget-product-categories-1">
                 <div class="container">
                     <div class="section-title medium text-center clearfix">
-                        <h3 class="heading">Product Categories</h3>
+                        <h3 class="heading">Các Sản Phẩm Nổi Bật</h3>
                         <div class="excerpt">
-                            <p>A quick look at our most popular categories.</p>
+                            <p>Chuyên sản xuất nội thất, văn phòng, nhà ở, chung cư, tủ quần áo, bàn trang điểm, bếp,...</p>
+							<p><b>Đặc biệt:</b> Gia công theo bản vẽ, thiết kế sản phẩm nội thất theo đơn đặc hàng.</p>
                         </div>
                     </div>
                 </div>
@@ -207,14 +208,14 @@
                         <article class="layers-masonry-column thumbnail  column span-4 with-overlay " data-cols="3">
                             <div class="thumbnail-media">
                                 <a href="#">
-                                    <img width="1024" height="720" src="images/LeatherColl2-9720_Rollover_02-1220x858-1024x720.jpg" class="attachment-large size-large" alt="LeatherColl2-9720_Rollover_02-1220x858" srcset="images/LeatherColl2-9720_Rollover_02-1220x858-1024x720.jpg 1024w, images/LeatherColl2-9720_Rollover_02-1220x858-300x211.jpg 300w, images/LeatherColl2-9720_Rollover_02-1220x858-768x540.jpg 768w, images/LeatherColl2-9720_Rollover_02-1220x858.jpg 1220w"
+                                    <img width="1024" height="720" src="images/LeatherColl2-9720_Rollover_02-1220x858-1024x720.jpg" class="attachment-large size-large" alt=tachment-large size-large" alt="LeatherColl2-9720_Rollover_02-1220x858" srcset="images/LeatherColl2-9720_Rollover_02-1220x858-1024x720.jpg 1024w, images/LeatherColl2-9720_Rollover_02-1220x858-300x211.jpg 300w, images/LeatherColl2-9720_Rollover_02-1220x858-768x540.jpg 768w, images/LeatherColl2-9720_Rollover_02-1220x858.jpg 1220w"
                                         sizes="(max-width: 1024px) 100vw, 1024px"> </a>
                             </div>
                             <div class="thumbnail-body">
                                 <div class="overlay">
                                     <header class="article-title">
                                         <h4 class="heading">
-                                            <a href="#">Seating</a>
+                                            <a href="#">Phòng Khách</a>
                                         </h4>
                                     </header>
                                     <a href="#" class="button">View Category</a>
@@ -231,7 +232,7 @@
                                 <div class="overlay">
                                     <header class="article-title">
                                         <h4 class="heading">
-                                            <a href="#">Storage</a>
+                                            <a href="#">Phòng ngủ 01</a>
                                         </h4>
                                     </header>
                                     <a href="#" class="button">View Category</a>
@@ -248,7 +249,7 @@
                                 <div class="overlay">
                                     <header class="article-title">
                                         <h4 class="heading">
-                                            <a href="#">Tables</a>
+                                            <a href="#">Phòng học</a>
                                         </h4>
                                     </header>
                                     <a href="#" class="button">View Category</a>
@@ -304,9 +305,9 @@
             <div class="storekit-product-list-widget widget row content-vertical-massive  " id="layers-widget-product-1">
                 <div class="container clearfix">
                     <div class="section-title clearfix medium text-center ">
-                        <h3 class="heading">Best Sellers</h3>
+                        <h3 class="heading">Sản phẩm ưu đãi</h3>
                         <div class="excerpt">
-                            <p>A quick look at our best sellers this week.</p>
+                            <p>Những sản phẩm ưu đãi sẽ được giảm giá nhiều hơn khi sử dụng kèm dịch vụ của chúng tôi.</p>
                         </div>
                     </div>
                 </div>
