--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="">
     <title>Nội Thất Giá Rẻ Thành Tài</title>
-	<meta name="description" content="Nội Thất Giá Rẻ Thành Tài">
+    <meta name="description" content="Nội Thất Giá Rẻ Thành Tài">
     <!-- Bootstrap Core CSS -->
     <!--<link href="css/bootstrap.min.css" rel="stylesheet">-->
     <!-- Custom CSS -->
@@ -70,6 +70,7 @@
 </head>
 
 <body class="page-template-builder">
+    <!-- amazon -->
     <div class="wrapper invert off-canvas-right" id="off-canvas-right">
         <a class="close-canvas" id="close-menu" data-toggle="#off-canvas-right" data-toggle-class="open">
             <i class="l-close"></i> Close </a>
@@ -199,7 +200,7 @@
                         <h3 class="heading">Các Sản Phẩm Nổi Bật</h3>
                         <div class="excerpt">
                             <p>Chuyên sản xuất nội thất, văn phòng, nhà ở, chung cư, tủ quần áo, bàn trang điểm, bếp,...</p>
-							<p><b>Đặc biệt:</b> Gia công theo bản vẽ, thiết kế sản phẩm nội thất theo đơn đặc hàng.</p>
+                            <p><b>Đặc biệt:</b> Gia công theo bản vẽ, thiết kế sản phẩm nội thất theo đơn đặc hàng.</p>
                         </div>
                     </div>
                 </div>
