--- a/html/index.html
+++ b/html/index.html
@@ -209,7 +209,7 @@
                         <article class="layers-masonry-column thumbnail  column span-4 with-overlay " data-cols="3">
                             <div class="thumbnail-media">
                                 <a href="#">
-                                    <img width="1024" height="720" src="images/LeatherColl2-9720_Rollover_02-1220x858-1024x720.jpg" class="attachment-large size-large" alt=tachment-large size-large" alt="LeatherColl2-9720_Rollover_02-1220x858" srcset="images/LeatherColl2-9720_Rollover_02-1220x858-1024x720.jpg 1024w, images/LeatherColl2-9720_Rollover_02-1220x858-300x211.jpg 300w, images/LeatherColl2-9720_Rollover_02-1220x858-768x540.jpg 768w, images/LeatherColl2-9720_Rollover_02-1220x858.jpg 1220w"
+                                    <img width="1024" height="720" src="images/LeatherColl2-9720_Rollover_02-1220x858-1024x720.jpg" class="attachment-large size-large" alt="attachment-large size-large" alt="LeatherColl2-9720_Rollover_02-1220x858" srcset="images/LeatherColl2-9720_Rollover_02-1220x858-1024x720.jpg 1024w, images/LeatherColl2-9720_Rollover_02-1220x858-300x211.jpg 300w, images/LeatherColl2-9720_Rollover_02-1220x858-768x540.jpg 768w, images/LeatherColl2-9720_Rollover_02-1220x858.jpg 1220w"
                                         sizes="(max-width: 1024px) 100vw, 1024px"> </a>
                             </div>
                             <div class="thumbnail-body">
@@ -504,8 +504,12 @@
                 <div class="grid">
                     <div class="column span-4 ">
                         <aside id="text-3" class="widget widget_text">
-                            <h5 class="section-nav-title">About Crafthouse</h5>
-                            <div class="textwidget">Nulla facilisi. Praesent eget ipsum at neque commodo tincidunt. Fusce velit metus, euismod viverra rutrum at, hendrerit a magna. In et purus molestie, porttitor leo ut, euismod arcu.</div>
+                            <h5 class="section-nav-title">Nội Thất Giá Rẻ Thành Tài</h5>
+                            <div class="textwidget">
+                                <p>Chuyên sản xuất nội thất, văn phòng, nhà ở, tủ quần áo, bàn trang điểm, bếp, chung cư, thiết kế tại nhà.</p>
+                                <hr style="color: rgba(255, 255, 255, 0.2);">
+                                <p>150/9A Lê Thị Riêng, Thới An, Quận 12, Hồ Chí Minh</p>
+                            </div>
                         </aside>
                     </div>
                     <div class="column span-4 ">
