--- a/html/index.html
+++ b/html/index.html
@@ -70,7 +70,7 @@
 </head>
 
 <body class="page-template-builder">
-    <!-- amazon -->
+    <!-- noithatgiarethanhtai.com -->
     <div class="wrapper invert off-canvas-right" id="off-canvas-right">
         <a class="close-canvas" id="close-menu" data-toggle="#off-canvas-right" data-toggle-class="open">
             <i class="l-close"></i> Close </a>
