UPDATE home page

--- a/html/index.html
+++ b/html/index.html
@@ -199,8 +199,7 @@
                     <div class="section-title medium text-center clearfix">
                         <h3 class="heading">Các Sản Phẩm Nổi Bật</h3>
                         <div class="excerpt">
-                            <p>Chuyên sản xuất nội thất, văn phòng, nhà ở, chung cư, tủ quần áo, bàn trang điểm, bếp,...</p>
-                            <p><b>Đặc biệt:</b> Gia công theo bản vẽ, thiết kế sản phẩm nội thất theo đơn đặc hàng.</p>
+                            <p>Chuyên sản xuất nội thất, văn phòng, nhà ở, chung cư, tủ quần áo, bàn trang điểm, bếp,...</p><p><b>Đặc biệt:</b> Gia công theo bản vẽ, thiết kế sản phẩm nội thất theo đơn đặc hàng.</p>
                         </div>
                     </div>
                 </div>
